Clase N°41: Publicar en npm .

--- a/website/package.json
+++ b/website/package.json
@@ -26,5 +26,8 @@
   ],
   "devDependencies": {
     "typescript": "4.6.3"
+  },
+  "dependencies": {
+    "@galeedgutierrez/platzimediaplayer": "^1.0.0"
   }
 }
